# MythoFrame-AI

./: .env.example  .gitignore  COMMANDS.md  HANDOFF.md  README.md  pyproject.toml
docs/: architecture.md  assets.md  codex_handoff.md  generation_modes.md  providers.md  stage_prompts.md  workflow.md
examples/: pilot_brief.md
prompts/stages/: adaptation.md  characters.md  edit_plan.md  image_prompts.md  script.md  shot_table.md  sound_plan.md  video_prompts.md
src/mythoframe/: __init__.py  __main__.py  artifacts.py  assets.py  bundle.py  cli.py  diagnostics.py  guide.py  manual_queue.py  media.py  output_tools.py  pilot.py  project.py  prompts.py  provider_profiles.py  providers.py  renderer.py  schemas.py  subtitles.py  timeline.py  workflow.py
tests/: test_backbone.py
